--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,4 @@ machine:
     version: 3.5.1
   environment:
     DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
+    SECRET_KEY: 'circle_test'
