--- a/circle.yml
+++ b/circle.yml
@@ -4,3 +4,6 @@ machine:
   environment:
     DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
     SECRET_KEY: 'circle_test'
+  test:
+    override:
+      - tox
